# Arcade

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  cbuild  readme.md
.github/workflows/: mirror.yml
include/: Arcade.hpp  Core.hpp  DLLoader.hpp  Exceptions.hpp  IDisplayModule.hpp  IElement.hpp  IGameModule.hpp  ISound.hpp  Utils.hpp
include/Shared/: Arcade.hpp  IDisplayModule.hpp  IEntity.hpp  IGameModule.hpp  ILibrary.hpp  ISound.hpp  Utility.hpp
lib/: CMakeLists.txt
lib/arcade_sdl2/src/: Display.cpp
lib/arcade_snake/include/: Game.hpp  Sound.hpp
lib/arcade_snake/src/: Game.cpp
lib/games/: CMakeLists.txt
lib/games/arcade_menu/include/: Game.hpp  GameMenu.hpp  Score.hpp
lib/games/arcade_menu/src/: Game.cpp  GameMenu.cpp  Score.cpp
lib/games/arcade_minesweeper/include/: GameMinesweeper.hpp
lib/games/arcade_minesweeper/src/: GameMinesweeper.cpp
lib/games/arcade_snake/include/: Entity.hpp  Game.hpp  GameSnake.hpp  Sound.hpp
lib/games/arcade_snake/src/: Game.cpp  GameSnake.cpp
lib/games/shared/include/: Entity.hpp
lib/graphicals/: CMakeLists.txt
lib/graphicals/arcade_ncurses/include/: DisplayNcurses.hpp
lib/graphicals/arcade_ncurses/src/: DisplayNcurses.cpp
lib/graphicals/arcade_sdl2/include/: Display.hpp  DisplaySDL2.hpp
lib/graphicals/arcade_sdl2/src/: Display.cpp  DisplaySDL2.cpp
lib/graphicals/arcade_sfml/include/: DisplaySFML.hpp
lib/graphicals/arcade_sfml/src/: DisplaySFML.cpp
score/: score.csv
src/: Core.cpp  DLLoader.cpp  Main.cpp  Utils.cpp  help.txt
tests/: tests_base.cpp
